--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,8 @@ header{
     background: #DCE35B;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to bottom, #45B649, #DCE35B);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to bottom, hsla(122, 45%, 49%, 0.67), hsla(63, 71%, 62%, 0.693)),url(img/img\ 05.jpg) ; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
 
 }
